<resources>
    <string name="app_name">Math Practice</string>
    <string name="correct_answers">Wrong, correct solutions for \n%s\nare %s and %s</string>
    <string name="well_done">Well Done!</string>
    <string name="next">Next</string>
    <string name="check">Check</string>
    <string name="second_answer">Second Answer</string>
    <string name="first_answer">First Answer</string>
    <string name="my_scores">My Scores</string>
    <string name="settings">Settings</string>
    <string name="no_data_in_scores_sentence">There is no data here.\nComplete some practices and come here again.</string>
    <string name="unfilled_fields">You must fill both of the fields</string>
    <string name="scores">Scores</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="auto_level_up">Auto Level-Up</string>
    <string name="back">back</string>
    <string name="user">User</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="trinom">Trinom</string>
    <string name="mul_table">Mul Table</string>
    <string name="trig_id">Trig id</string>
    <string name="enter_your_answer_here">Enter Your Answer Here</string>
    <string name="show_full_data_practice_and_success">Show Full Data (Practice and success)</string>
    <string name="remind_me_later">Remind Me Later</string>
    <string name="title_activity_register">RegisterActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="welcome_please_fill_the_fields_below">Welcome, please fill the fields below</string>
    <string name="finish_registration">Finish Registration</string>
    <string name="take_photo">Take Photo</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="my_profile">my profile</string>
    <string name="user_s_image">User\'s Image</string>
    <string name="login">Login</string>
    <string name="level_dots">Level:</string>
    <string name="practice_dots">Practice:</string>
    <string name="score_dots">Score:</string>
    <string name="remind_me_in">Remind me in</string>
    <string name="minutes">minutes</string>

</resources>